Fixed overflow bug with background on mobile devies

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,6 @@ body{
   font-family: 'Montserrat',
   sans-serif;
   color: white;
-  overflow-y: scroll;
 }
 body::-webkit-scrollbar{
   width: 10px;
